--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "yaml": "^2.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tailwindcss -i ./src/input.css -o ./public/style.css --watch"
   },
   "repository": {
     "type": "git",
